--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple Pay Customer Service – Contact Apple Support</title>
-    <meta name="description" content="Contact Apple Pay customer service 24/7 for payment issues, card errors, or unauthorized charges. Get Apple support via phone, chat, or from your iPhone settings." />
+    <meta name="description" content=" (888)499-6OO2 Contact Apple Pay customer service 24/7 for payment issues, card errors, or unauthorized charges. Get Apple support via phone, chat, or from your iPhone settings." />
     <meta name="keywords" content="Apple Pay customer service, Apple Pay support number, Apple Pay help, Apple support Apple Pay, contact Apple Pay, Apple Pay phone support, Apple Pay technical support, Apple Pay live chat, Apple Pay issues, Apple Pay not working, Apple Pay troubleshooting" />
   </head>
   <body>
