--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Robots -->
     <meta name="robots" content="index, follow" />
 
-    <!-- Structured Data for Geo Targeting -->
+    <!-- Structured Data for Geo Targeting (No contactPoint) -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -35,11 +35,7 @@
       "name": "Apple Pay Support",
       "url": "https://iphonesupport.netlify.app/",
       "logo": "https://iphonesupport.netlify.app/apple.png",
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "contactType": "Customer Service",
-        "areaServed": ["US", "CA"],
-      }
+      "areaServed": ["US", "CA"]
     }
     </script>
   </head>
