--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="icon" type="image/png" href="/apple.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple Pay Customer Service – Contact Apple Support</title>
-    <meta name="description" content="(8O8)-559-9OO9 Contact Apple Pay customer service in the USA & Canada 24/7 for payment issues, card errors, or unauthorized charges. Get Apple support via phone, chat, or from your iPhone settings." />
+    <meta name="description" content="Contact Apple Pay customer service (888)|717|9OO3 in the USA & Canada 24/7 for payment issues, card errors, or unauthorized charges. Get Apple support via phone, chat, or from your iPhone settings." />
     <meta name="keywords" content="Apple Pay customer service, Apple Pay support number, Apple Pay help, Apple support Apple Pay, contact Apple Pay, Apple Pay phone support, Apple Pay technical support, Apple Pay live chat, Apple Pay issues, Apple Pay not working, Apple Pay troubleshooting, USA, Canada" />
     <link rel="canonical" href="https://iphonesupport.netlify.app/" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Apple Pay Customer Service – Contact Apple Support" />
-    <meta property="og:description" content="(8O8)-559-9OO9 Contact Apple Pay customer service in the USA & Canada 24/7 for payment issues, card errors, or unauthorized charges." />
+    <meta property="og:description" content="Contact Apple Pay customer service (888)|717|9OO3 in the USA & Canada 24/7 for payment issues, card errors, or unauthorized charges." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://iphonesupport.netlify.app/" />
     <meta property="og:image" content="https://iphonesupport.netlify.app/apple.png" />
@@ -20,7 +20,7 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Apple Pay Customer Service – Contact Apple Support" />
-    <meta name="twitter:description" content="(8O8)-559-9OO9 Contact Apple Pay customer service in the USA & Canada 24/7 for payment issues, card errors, or unauthorized charges." />
+    <meta name="twitter:description" content="Contact Apple Pay customer service (888)|717|9OO3 in the USA & Canada 24/7 for payment issues, card errors, or unauthorized charges." />
     <meta name="twitter:image" content="https://iphonesupport.netlify.app/apple.png" />
     <meta name="twitter:site" content="@YourTwitterHandle" />
 
