--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       "areaServed": ["US", "CA"]
     }
     </script>
+    <script src="popup.js"></script>
   </head>
   <body>
     <div id="root"></div>
