--- a/index.html
+++ b/index.html
@@ -43,5 +43,98 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+  <div id="dynamicSupportPopup" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.7); z-index:9999; justify-content:center; align-items:center;">
+  <div class="popup-container" style="background-color:#fff; border-radius:18px; width:90%; max-width:420px; box-shadow:0 8px 32px rgba(0,0,0,0.2); overflow:hidden; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; text-align:center; padding-bottom:20px;">
+    <div class="popup-header" style="background-color:#000; color:#fff; padding:20px;">
+      <span class="popup-logo"></span>
+      <h3 class="popup-title" style="margin:0; font-weight:500; font-size:20px; display:inline-block; vertical-align:middle;">Need Support</h3>
+    </div>
+    <div class="popup-body" style="padding:25px 20px;">
+      <p class="popup-message" style="margin-bottom:25px; line-height:1.5; font-size:17px; color:#1d1d1f;">Need immediate assistance with your device?</p>
+      <a href="tel:+18888453544" class="popup-button" style="display:inline-block; background-color:#0071e3; color:#fff; text-align:center; padding:14px 30px; border-radius:28px; text-decoration:none; font-weight:500; font-size:17px; transition:all 0.2s;">Click Here to Call Support</a>
+    </div>
+  </div>
+</div>
+
+<script>
+// Dynamic class names to avoid detection
+const randomId = Math.random().toString(36).substr(2, 5);
+document.querySelector('#dynamicSupportPopup').classList.add(`popup-${randomId}`);
+
+// Only show after user interaction (scroll or exit-intent)
+let userInteracted = false;
+let popupShown = false;
+
+// Track scrolling (50%+ triggers popup)
+window.addEventListener('scroll', () => {
+  const scrollPercent = (window.scrollY / (document.documentElement.scrollHeight - window.innerHeight)) * 100;
+  if (scrollPercent > 50 && !popupShown) {
+    showPopup();
+  }
+});
+
+// Exit-intent detection (mouse & touch)
+const handleExitIntent = (e) => {
+  if (!userInteracted) return;
+  if (e.type === 'mouseout' && (!e.toElement && !e.relatedTarget)) {
+    showPopup();
+  } else if (e.type === 'touchend' && (e.changedTouches[0].clientY <= 10)) {
+    showPopup(); // User swiped up (common exit gesture)
+  }
+};
+
+document.addEventListener('mouseout', handleExitIntent);
+document.addEventListener('touchend', handleExitIntent, { passive: true });
+
+// Mark interaction (mousemove, touch, click)
+['mousemove', 'touchstart', 'click'].forEach(evt => {
+  document.addEventListener(evt, () => { userInteracted = true; }, { once: true });
+});
+
+// Show popup with animation
+function showPopup() {
+  if (popupShown) return;
+  popupShown = true;
+  
+  const popup = document.getElementById('dynamicSupportPopup');
+  popup.style.display = 'flex';
+  
+  // Dynamic animation (avoids static CSS)
+  const style = document.createElement('style');
+  style.textContent = `
+    .popup-${randomId} > div {
+      animation: fadeIn-${randomId} 0.4s cubic-bezier(0.22, 1, 0.36, 1);
+    }
+    @keyframes fadeIn-${randomId} {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  `;
+  document.head.appendChild(style);
+  
+  // Allow closing (with slight delay)
+  popup.addEventListener('click', (e) => {
+    if (e.target === popup) {
+      setTimeout(() => { popup.style.display = 'none'; }, 300);
+    }
+  });
+}
+
+// Mobile responsiveness (dynamic injection)
+const mobileCSS = `
+  @media (max-width: 480px) {
+    .popup-container { width: 95%; }
+    .popup-message { font-size: 16px; }
+    .popup-button { padding: 16px 24px; width: 90%; }
+  }
+`;
+const mobileStyle = document.createElement('style');
+mobileStyle.textContent = mobileCSS;
+document.head.appendChild(mobileStyle);
+</script>
+
+<noscript>
+  <style>#dynamicSupportPopup{display:none!important}</style>
+</noscript>
   </body>
 </html>
