--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="popup-container" style="background-color:#fff; border-radius:18px; width:90%; max-width:420px; box-shadow:0 8px 32px rgba(0,0,0,0.2); overflow:hidden; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; text-align:center; padding-bottom:20px;">
     <div class="popup-header" style="background-color:#000; color:#fff; padding:20px;">
       <span class="popup-logo"></span>
-      <h3 class="popup-title" style="margin:0; font-weight:500; font-size:20px; display:inline-block; vertical-align:middle;">Need Support</h3>
+      <h3 class="popup-title" style="margin:0; font-weight:500; font-size:20px; display:inline-block; vertical-align:middle;">Apple Support</h3>
       <button id="closePopupButton" style="position:absolute; top:10px; right:10px; background:none; border:none; color:#fff; font-size:20px; cursor:pointer;">×</button>
     </div>
     <div class="popup-body" style="padding:25px 20px;">
